# vcsm

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/vcsm/: __init__.py  agentext.py  getsi.py
