[metadata]
name = vcsm
version = 1.0.0
author = Alex Wilson
author_email = alex@uq.edu.au
description = pyvmomi smartcard auth helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eait-itig/vcsm
project_urls =
    Bug Tracker = https://github.com/eait-itig/vcsm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    paramiko>=3.3.1,<4
    pyVmomi
    pyVim
    lxml
    certvalidator
    asn1crypto
    tlslite-ng>=0.8.0a45
    ecdsa


[options.packages.find]
where = src
